// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Embed Block should render Default 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <iframe
      allowfullscreen=""
      class="emotion-2 emotion-3"
      id="iFrameResizer0"
      scrolling="no"
      src="https://www.example.com"
      style="overflow: hidden;"
      title="Title"
    />
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithClassName 1`] = `
<DocumentFragment>
  <div
    class="extra-classname emotion-0 emotion-1"
  >
    <iframe
      allowfullscreen=""
      class="emotion-2 emotion-3"
      id="iFrameResizer1"
      scrolling="no"
      src="https://www.example.com"
      style="overflow: hidden;"
      title="Title"
    />
  </div>
</DocumentFragment>
`;

exports[`Embed Block should render WithEmotion 1`] = `
<DocumentFragment>
  <div
    class="emotion-0 emotion-1"
  >
    <iframe
      allowfullscreen=""
      class="emotion-2 emotion-3"
      id="iFrameResizer2"
      scrolling="no"
      src="https://www.example.com"
      style="overflow: hidden;"
      title="Title"
    />
  </div>
</DocumentFragment>
`;
